# vscode

./: 1.cpp  1.h  CGCTest.cpp  HFJetTreeMaker.cpp  HFJetTreeMaker.h  README.md  cross_section.cpp  read_and_input  tempCodeRunnerFile.cpp  test.cpp  指针和数组的关系.cpp
rcbkdipole-master/: CMakeLists.txt  test.C  test1.C
rcbkdipole-master/build1/: CGCTest  CMakeCache.txt  Makefile  cmake_install.cmake
rcbkdipole-master/build1/src/: Makefile  cmake_install.cmake  dipole
rcbkdipole-master/src/: 1.txt  ALICEdata.txt  CGCTest  CGCTest.cpp  CGCTest_cpp.d  CMakeCache.txt  CMakeLists.txt  GBW.cpp  GBW.hpp  MCtest.C  MV_dNOverdydpT_y=3_3.txt  MV_dNOverdydpT_y=3_8.txt  MV_x=1e-5.txt  MVe_Pi0dNdydpt.txt  MVe_dNOverdydpT_y=3_3.txt  MVe_dNOverdydpT_y=3_8.txt  MVe_x=1e-2.txt  MVe_x=1e-5.txt  MVgamma_dNOverdydpT_y=3_3.txt  MVgamma_dNdy.txt  MVgamma_x=1e-2.txt  MVgamma_x=1e-5.txt  Makefile  S_k_in_adj_mv_1e-2.txt  S_k_in_adj_mve_1e-2.txt  S_k_in_adj_mvgamma_1e-2.txt  S_k_in_fund_mv_1e-2.txt  S_k_in_fund_mve_1e-2.txt  S_k_in_fund_mvgamma_1e-2.txt  alpha_s.txt  amplitudelib.cpp  amplitudelib.hpp  amplitudelib_cpp.d  amplitudelib_cpp_ACLiC_dict_rdict.pcm  cmake_install.cmake  config.hpp  config_hpp.d  config_hpp_ACLiC_dict_rdict.pcm  dNOverdydpT_y=3_3.txt  dNOverdydpT_y=3_8.txt  (+69 more)
rcbkdipole-master/src/src/: Makefile  cmake_install.cmake  dipole
